--- a/css/Lux/bootstrap.css
+++ b/css/Lux/bootstrap.css
@@ -12,6 +12,8 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 @import url("https://fonts.googleapis.com/css?family=Nunito+Sans:400,600&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Halant&display=swap');
+
 :root {
   --blue: #007bff;
   --indigo: #6610f2;
@@ -40,6 +42,7 @@
   --breakpoint-lg: 992px;
   --breakpoint-xl: 1200px;
   --font-family-sans-serif: "Nunito Sans", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  --font-family-halant : "Halant", serif;
   --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 }
 
