--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,4 +1,4 @@
-﻿js-scroll-trigger@charset "UTF-8";
+﻿js-scroll-trigger
 
 html,
 body {
@@ -10,8 +10,9 @@ h1, h2, h3, h4, h5, h6 {
     font-family: var(--font-family-halant);
 }
 
-div.important{
-    border:1px solid var(--red);
+div.important {
+    border: 1px solid var(--red);
+    border-radius: 0.2rem ;
     padding: 1rem;
 }
 
@@ -48,13 +49,13 @@ div.important{
     }
 
 
-.masterhead #panel {
-    padding:1.7rem;
-    border: 1px solid var(--red);
-    background: rgba(22, 22, 22,0.7);
-    border-radius:0.70rem !important;
-    box-shadow:0.4rem 0.4rem 0.6rem black;
-}
+    .masterhead #panel {
+        padding:1.7rem;
+        border: 1px solid var(--red);
+        background: rgba(22, 22, 22,0.7);
+        border-radius:0.70rem !important;
+        box-shadow:0.4rem 0.4rem 0.6rem black;
+    }
 
 .regolamento-content {
     padding: 5rem 0;
