--- a/css/Styles.css
+++ b/css/Styles.css
@@ -8,6 +8,11 @@ h1, h2, h3, h4, h5, h6 {
     text-align:center;
 }
 
+hr.endsection{
+    border: 1px solid var(--gray-dark);
+    width:50%;
+}
+
 div.important {
     border: 1px solid var(--red);
     border-radius: 0.2rem ;
@@ -18,6 +23,13 @@ div.important {
     padding:0.8rem;
 }
 
+.btn-outline-danger:hover {
+    color: #fff !important;
+    background-color: #d9534f;
+    border-color: #d9534f;
+}
+
+/*masterhead section*/
 .masterhead {
     position: relative;
     width: 100%;
@@ -29,30 +41,30 @@ div.important {
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-size: cover;
-    box-shadow: 0 0.5rem 1rem  grey;
+    box-shadow: 0 0.5rem 1rem grey;
 }
 
-    .masterhead h1,
-    .masterhead h2,
-    .masterhead h3,
-    .masterhead h4,
-    .masterhead h5,
-    .masterhead h6 {
-        color: #fff;
-    }
-    
-    .masterhead hr {
-        border-top: 1px solid white;
-    }
+.masterhead h1,
+.masterhead h2,
+.masterhead h3,
+.masterhead h4,
+.masterhead h5,
+.masterhead h6 {
+    color: #fff;
+}
+
+.masterhead hr {
+    border-top: 1px solid white;
+}
 
 
-    .masterhead #panel {
-        padding:1.7rem;
-        border: 1px solid var(--red);
-        background: rgba(22, 22, 22,0.7);
-        border-radius:0.70rem !important;
-        box-shadow:0.4rem 0.4rem 0.6rem black;
-    }
+.masterhead #panel {
+    padding:1.7rem;
+    border: 1px solid var(--red);
+    background: rgba(22, 22, 22,0.7);
+    border-radius:0.70rem !important;
+    box-shadow:0.4rem 0.4rem 0.6rem black;
+}
 
 .section-content {
     padding: 5rem 0;
@@ -60,6 +72,7 @@ div.important {
     -webkit-font-smoothing: antialiased;
 }
 
+/*Regolamento section*/
 .regolamento-content {
     text-align: justify;
     line-height: 2rem;
@@ -77,26 +90,39 @@ div.important {
     .regolamento-content a{
         color:var(--red);
     }
+
+/*Commissione content*/
 .commissione-content .card-title{
     color:var(--red);
 }
 
 
+/*Premi content*/
+.premi-content {
+    text-align: justify;
+    line-height: 2rem;
+}
 
+    .premi-content strong {
+        font-weight: bold;
+        font-size: 1.1rem;
+    }
 
+    .premi-content bold {
+        font-weight: bold;
+    }
 
+    .premi-content a {
+        color: var(--red);
+    }
 
-
-
-
-
-
-
-
-
+/*footer section*/
 #footer-main {
     background: #fff;
     color: #000000;
     font-size: 0.8rem;
     padding: 2.0rem 0;
 }
+    #footer-main h6 {
+        text-align: left !important;
+    }
