--- a/css/Styles.css
+++ b/css/Styles.css
@@ -123,6 +123,33 @@ font-size:1.1rem;
         font-size:larger;
     }
 
+/*Video section*/
+.video-content {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    min-height: 35rem;
+    padding: 15rem 0;
+    background: url("../img/man-piano.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-attachment: scroll;
+    background-size: cover;
+}
+
+    .video-content #panel {
+        padding: 1.7rem;
+        border: 1px solid var(--red);
+        background: rgba(22, 22, 22,0.7);
+        border-radius: 0.70rem !important;
+        box-shadow: 0.4rem 0.4rem 0.6rem black;
+        color:white
+    }
+
+.video-content h1{
+    color:white;
+}
+
 /*footer section*/
 #footer-main {
     background: #fff;
