--- a/css/Styles.css
+++ b/css/Styles.css
@@ -156,7 +156,7 @@ font-size:1.1rem;
     color: #000000;
     font-size: 0.8rem;
     padding: 2rem 0 1rem 0;
-    border-top:0.5px solid #b2b2b2;
+    border-top:0.5px solid var(--red);
 }
     #footer-main h6 {
         text-align: left !important;
