--- a/css/Styles.css
+++ b/css/Styles.css
@@ -43,6 +43,7 @@ div.important {
     min-height: 35rem;
     padding: 15rem 0;
     background: url("../img/chords-sheet-on-piano.jpg");
+    /*background:linear-gradient(to bottom,rgba(0, 0, 0,0) 0%, rgba(0, 0, 0,0.5) 95%),*/
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: scroll;
