--- a/css/Styles.css
+++ b/css/Styles.css
@@ -159,6 +159,10 @@ font-size:1.1rem;
     padding: 2rem 0 1rem 0;
     border-top:0.5px solid var(--red);
 }
+
+    #footer-main a .no-underscore :hover {
+        text-decoration: none;
+    }
     #footer-main h6 {
         text-align: left !important;
     }
