--- a/css/Styles.css
+++ b/css/Styles.css
@@ -1,54 +1,58 @@
 ﻿html,
 body {
-    height: 100%;
+  height: 100%;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    font-family: var(--font-family-halant);
-    text-align:center;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: var(--font-family-halant);
+  text-align: center;
 }
 
-hr.endsection{
-    border: 1px solid var(--gray-dark);
-    width:50%;
+hr.endsection {
+  border: 1px solid var(--gray-dark);
+  width: 50%;
 }
 
 div.important {
-    border: 1px solid var(--red);
-    border-radius: 0.2rem ;
-    padding: 1rem;
+  border: 1px solid var(--red);
+  border-radius: 0.2rem;
+  padding: 1rem;
 }
 
 /*navbar*/
-.navbar{
-    padding:0.5rem;
+.navbar {
+  padding: 0.5rem;
 }
 
-.nav-link.active{
-    color:var(--red) !important;
+.nav-link.active {
+  color: var(--red) !important;
 }
-
 
 .btn-outline-danger:hover {
-    color: #fff !important;
-    background-color: #d9534f;
-    border-color: #d9534f;
+  color: #fff !important;
+  background-color: #d9534f;
+  border-color: #d9534f;
 }
 
 /*masterhead section*/
 .masterhead {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    min-height: 35rem;
-    padding: 15rem 0;
-    background: url("../img/chords-sheet-on-piano.jpg");
-    /*background:linear-gradient(to bottom,rgba(0, 0, 0,0) 0%, rgba(0, 0, 0,0.5) 95%),*/
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-size: cover;
-    box-shadow: 0 0.5rem 1rem grey;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 35rem;
+  padding: 15rem 0;
+  background: url("../img/chords-sheet-on-piano.jpg");
+  /*background:linear-gradient(to bottom,rgba(0, 0, 0,0) 0%, rgba(0, 0, 0,0.5) 95%),*/
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
+  box-shadow: 0 0.5rem 1rem grey;
 }
 
 .masterhead h1,
@@ -57,112 +61,113 @@ div.important {
 .masterhead h4,
 .masterhead h5,
 .masterhead h6 {
-    color: #fff;
+  color: #fff;
 }
 
 .masterhead hr {
-    border-top: 1px solid white;
+  border-top: 1px solid white;
 }
 
-
-    .masterhead #panel-masterhead {
-        padding: 1.7rem;
-        border: 1px solid var(--red);
-        background: rgba(22, 22, 22,0.7);
-        border-radius: 0.70rem !important;
-        box-shadow: 0.4rem 0.4rem 0.6rem black;
-    }
+.masterhead #panel-masterhead {
+  padding: 1.7rem;
+  border: 1px solid var(--red);
+  background: rgba(22, 22, 22, 0.7);
+  border-radius: 0.7rem !important;
+  box-shadow: 0.4rem 0.4rem 0.6rem black;
+}
 
 .section-content {
-    padding: 5rem 0;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
+  padding: 5rem 0;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
 }
 
-    
 /*Regolamento section*/
 .regolamento-content {
-    text-align: justify;
-    line-height: 2rem;
+  text-align: justify;
+  line-height: 2rem;
 }
 
-.regolamento-content strong{
-font-weight:bold;
-font-size:1.1rem;
+.regolamento-content strong {
+  font-weight: bold;
+  font-size: 1.1rem;
 }
 
 .regolamento-content bold {
-    font-weight: bold;
+  font-weight: bold;
 }
 
-.regolamento-content a{
-    color:var(--red);
+.regolamento-content a {
+  color: var(--red);
 }
 
 /*Commissione content*/
-.commissione-content .card-title{
-    color:var(--red);
+.commissione-content .card-title {
+  color: var(--red);
 }
-
 
 /*Premi content*/
 .premi-content {
-    text-align: justify;
-    line-height: 2rem;
+  text-align: justify;
+  line-height: 2rem;
 }
 
-    .premi-content strong {
-        font-weight: bold;
-        font-size: 1.1rem;
-    }
+.premi-content strong {
+  font-weight: bold;
+  font-size: 1.1rem;
+}
 
-    .premi-content a {
-        color: var(--red);
-    }
+.premi-content a {
+  color: var(--red);
+}
 
-    .premi-content p{
-        font-size:larger;
-    }
+.premi-content p {
+  font-size: larger;
+}
 
 /*Video section*/
 .video-content {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    min-height: 35rem;
-    padding: 15rem 0;
-    background: url("../img/orchestra.jpg");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: scroll;
-    background-size: cover;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 35rem;
+  padding: 15rem 0;
+  background: url("../img/orchestra.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
+  background-size: cover;
 }
 
-    .video-content #panel-video {
-        padding: 1.7rem;
-        border: 1px solid var(--red);
-        background: rgba(22, 22, 22,0.8);
-        border-radius: 0.70rem !important;
-        box-shadow: 0.4rem 0.4rem 0.6rem black;
-        color: white
-    }
+.video-content #panel-video {
+  padding: 1.7rem;
+  border: 1px solid var(--red);
+  background: rgba(22, 22, 22, 0.8);
+  border-radius: 0.7rem !important;
+  box-shadow: 0.4rem 0.4rem 0.6rem black;
+  color: white;
+}
 
-.video-content h1{
-    color:white;
+.video-content h1 {
+  color: white;
 }
 
 /*footer section*/
 #footer-main {
-    background: #fff;
-    color: #000000;
-    font-size: 0.8rem;
-    padding: 2rem 0 1rem 0;
-    border-top:0.5px solid var(--red);
+  background: #fff;
+  color: #000000;
+  font-size: 0.8rem;
+  padding: 2rem 0 1rem 0;
+  border-top: 0.5px solid var(--red);
 }
 
-    #footer-main a:hover {
-        text-decoration: none !important;
-    }
-    #footer-main h6 {
-        text-align: left !important;
-    }
+#footer-main a:hover {
+  text-decoration: none !important;
+}
+#footer-main h6 {
+  text-align: left !important;
+}
+
+.js-scroll-trigger {
+  font-size: 0.9rem;
+}
